# maze-robotik

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.ps1  docker-build.sh  docker-run.ps1  docker-run.sh
docs/: ALGOS.md
docs/benchmark/: benchmark.csv
workspace/src/maze_explorer/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
workspace/src/maze_explorer/config/: slam_async.yaml
workspace/src/maze_explorer/launch/: slam.launch.py
workspace/src/maze_explorer/maze_explorer/: frontier_explorer.py  path_executor.py
workspace/src/maze_planners/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
workspace/src/maze_planners/launch/: demo.rviz  full_demo.launch.py
workspace/src/maze_planners/maze_planners/: benchmark.py  grid.py  map_converter.py  planner_node.py  visualize.py
workspace/src/maze_planners/maze_planners/algorithms/: __init__.py  astar.py  base.py  bfs.py  floodfill.py  wall_follower.py
workspace/src/maze_planners/tests/: test_planners.py
workspace/src/maze_worlds/: README.md  package.xml  setup.cfg  setup.py
workspace/src/maze_worlds/config/: bridge.yaml
workspace/src/maze_worlds/launch/: maze_world.launch.py
workspace/src/maze_worlds/maze_worlds/: generate_maze.py
workspace/src/maze_worlds/urdf/: maze_bot.urdf.xacro
workspace/src/maze_worlds/worlds/: maze.sdf
