<?xml version="1.0"?>
<package format="3">
  <name>maze_planners</name>
  <version>0.0.1</version>
  <description>path planning algorithms (wall-follower, bfs, a*, flood-fill) + benchmarks</description>
  <maintainer email="kurzmichael02@gmail.com">Michael Kurz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
