<?xml version="1.0"?>
<package format="3">
  <name>maze_planners</name>
  <version>0.0.1</version>
  <description>path planning algos (wall-follower, bfs, a*, flood-fill) + benchmark</description>
  <maintainer email="kurzmichael02@gmail.com">Michael Kurz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
