<?xml version="1.0"?>
<package format="3">
  <name>maze_worlds</name>
  <version>0.0.1</version>
  <description>maze generation + gazebo worlds for the maze runner project</description>
  <maintainer email="kurzmichael02@gmail.com">Michael Kurz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
